# mcp-trust

./: .dockerignore  .gitignore  AGENTS.md  CORPUS-BUILDER.md  CORPUS-DEFERRED-REVIEW.md  CORPUS-NEAR-NEXT-REVIEW.md  DEPLOY-VERCEL.md  DEPLOY-VM.md  Dockerfile.scan  HANDOFF.md  LAUNCH-CATALOG.md  LAUNCH-GATE.md  LAUNCH.md  LICENSE  README.md  SPEC.md  masked-grades.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
deploy/: Caddyfile  backup-sqlite.sh  mcp-trust-backup.service  mcp-trust-backup.timer  mcp-trust.env.example  mcp-trust.service  smoke-readonly.sh  vercel.json
deploy/launchd/: com.d.mcp-trust-refresh.plist  install.sh  uninstall.sh
docs/: CAPABILITY-RULING-2026-07-10.md
scripts/: build_deploy_bundle.py  build_site.py  build_snapshot.py  corpus_scan.py  deploy_production.sh  draft_corpus_records.py  plan_corpus_catalog_integration.py  plan_reference_scans.py  plan_registry_corpus.py  promote_corpus_records.py  reference_scan_plan.py  refresh_and_publish.sh  refresh_candidate.py  scan_real.py  validate_deploy_authorization.py  validate_launch_state.py
src/mcp_trust/: __init__.py  catalog_snapshot.json  mcp_server.py  receipts.py  refresh.py
src/mcp_trust/api/: AGENTS.md  __init__.py  app.py  web.py
src/mcp_trust/catalog/: __init__.py  seed.py  seed_servers.json  (+1 more)
tests/: test_api.py  test_build_site_script.py  test_build_snapshot.py  test_cli.py  test_corpus_records.py  test_credentialed_scan.py  test_deploy_bundle_builder.py  test_deployment_authority.py  test_draft_corpus_records.py  test_drift.py  test_governance.py  test_grading.py  test_launch_state_validator.py  test_mcp_server.py  test_mcpaudit_adapter.py  test_mcpaudit_evidence.py  test_models.py  test_plan_corpus_catalog_integration.py  test_promote_corpus_records.py  test_provenance.py  test_public_grade_drift.py  test_receipt_provenance.py  test_reference_scan_plan.py  test_refresh_candidate.py  test_registry_corpus_plan.py  test_sandbox.py  test_site_generator.py  test_spec_shift.py  test_store.py  test_stub_engine.py  test_web.py
(+27 files in other folders)
