[project]
name = "mcp-trust"
version = "0.1.0"
description = "A neutral public trust registry for MCP servers — check before you connect."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "typer>=0.12",
]

[project.optional-dependencies]
# Real scanning backend. Without it, the registry runs on the StubEngine.
engine = ["mcp-audits>=2.1.0"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
mcp-trust = "mcp_trust.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_trust"]

[tool.ruff]
target-version = "py311"
extend = "../ruff.toml"

[tool.ruff.lint]
extend-select = ["B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
